--- a/css/bestellung.css
+++ b/css/bestellung.css
@@ -8,11 +8,12 @@
 
 section.flex{
     display: flex;
-    align-items: flex-start;
+    justify-content: space-evenly;
+    justify-items: center;
     flex-direction: column;
 }
 
-figure.flexbox-item{
+figure.flexbox-image{
     flex: 1;
 }
 
@@ -21,15 +22,18 @@ h3:hover{
     cursor: default;
 }
 
-h3{
-    margin-left: 40px;
-}
+/* h3{
+     margin-left: 40px; 
+} */
 
 .beschreibung{
     flex: 1;
     font-size: large;
-    margin-top: 205px;
-    margin-right: 210px;
+    justify-content: center;
+}
+
+.beschreibung span{
+    justify-content: center;
 }
 
 form{
@@ -39,6 +43,27 @@ form{
 .outer-flex{
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
+    border-radius: 1%;
     border: 1px #ccc solid;
-    width: 1200px;
 }
+
+@media only screen and (max-width: 500px){
+    .beschreibung span{
+        visibility: hidden;
+        flex:0;
+    }
+    figure.flexbox-image{
+        flex: 50%;
+    }
+}
+
+/* @media only screen and (min-width: 600px){
+    .beschreibung span{
+        visibility: visible;
+        flex:1;
+    }
+    figure.flexbox-image{
+        flex: 1;
+    }
+} */
